2005-08-25  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* po/ChangeLog: Added separate ChangeLog for translations.
	
	* MANIFEST.in: Added po/ChangeLog.

2005-08-25  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* setup.py: Import VERSION from same directory.
	
	* gaupol:
	  constants.py:
	  Changed version numbers to 0.0.0.
	  
	* releasing.txt: Wrote file.
	
	* README.translators: Added a bit more info.

2005-08-24  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* README: Updated based on website text.
	
	* gui/delegates/helper.py: Changed DOWNLOAD_URL to point to new URL.
	
	* README.translators: Added a bit more info.
	
	* fi.po: Added package and version info.

	* doc: New directory for documentation.
	
	* doc/releasing.txt: New file for release checklist.

2005-08-24  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gui/delegates/celleditor.py:
	  fi/po:
	  Fixed one translatable string.
	  
	* lib/gaupol/lib/tags/taglib.py:
	  lib/gaupol/lib/tags/tagconv.py:
	  lib/gaupol/lib/tags/mpl2.py:
	  Added arbitrary pre and post encode and decode tag conversion functions
	  and used one for MPL2.

2005-08-22  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* setup.py: Fixed location of "doc" directory.

2005-08-22  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* fi.po: Fixed finnish translation.

2005-08-22  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* INSTALL: File initially written.

2005-08-22  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* setup.py: Changed package name to lowercase.

2005-08-22  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* MANIFEST.in: New file.
	
	* setup.cfg: New file.
	
	* setup.py: File initially written.
	
	* gaupol (prepare_installed_run):
	  Changed LIB_DIR to point to Python's site-packages.
	  
	* gaupol.desktop: Fixed Category to AudioVideo.
	
	* trantool: Use glob to find files.
	
	* uninstall.py: Removed in favor of uninstallation in setup.py.

2005-08-21  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol: Re-added "-t" / "--no-translation" option.

	* README.translators: